# smoketree

./: .gitignore  CLAUDE.md  DESIGN.md  DESIGN_ADDENDUM.md  PATHTREE.md  README.md  pyproject.toml
examples/: README.md
examples/01-file-transform/: .gitignore  README.md  smoketree.yaml
examples/01-file-transform/sources/note/harbor/: raw.md
examples/01-file-transform/sources/note/kaiju/: raw.md
examples/02-batching-prompts/: README.md  smoketree.yaml
examples/02-batching-prompts/sources/item/lantern/: topic.txt
examples/03-using-schema/: README.md  smoketree.yaml
examples/03-using-schema/schema/: listing.yaml
examples/03-using-schema/sources/item/teacup/: topic.txt
examples/04-image-generation/: .gitignore  README.md  smoketree.yaml
examples/04-image-generation/sources/concept/harbor/: idea.txt
examples/04-image-generation/sources/concept/teahouse/: idea.txt
examples/04-image-generation/workflows/: txt2img.json
examples/05-image-editing/: README.md  smoketree.yaml
examples/05-image-editing/sources/: edit.txt
examples/05-image-editing/workflows/: flux2-edit.json
examples/06-feedback-loops/: .gitignore  README.md  smoketree.yaml
examples/06-feedback-loops/sources/product/candle/: brief.txt
examples/06-feedback-loops/sources/product/gadget/: brief.txt
examples/07-brainstorm-loop/: .gitignore  README.md  smoketree.yaml
examples/07-brainstorm-loop/schema/: batch.yaml
examples/08-gating/: .gitignore  README.md  smoketree.yaml
examples/08-gating/sources/candidate/compliment/: idea.md
examples/09-working-files/: .gitignore  README.md  smoketree.yaml
examples/09-working-files/scripts/: draft.py
src/smoketree/: __init__.py  bind.py  cache.py  cli.py  engine.py  errors.py  executor.py  graph.py  images.py  loader.py  media.py  models.py  project.py  reconcile.py  rules.py  scaffold.py  serde.py
src/smoketree/backends/: __init__.py  _prompt.py  base.py  blender.py  claude.py  comfyui.py  explode.py  ollama.py  openai.py  openai_image.py  replicate.py  shell.py
src/smoketree/templates/: INSTRUCTIONS.md
src/smoketree/workspace/: __init__.py  actions.py  channels.py  graph.py  index.py  server.py
src/smoketree/workspace/web/: app.js  index.html  styles.css  util.js
tests/: test_smoketree.py
(+12 files in other folders)
