[project]
name = "smoketree"
version = "0.2.0"
description = "A declarative pipeline tool for media transformation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "pillow>=10.0",
    "jsonschema>=4.0",
    "jinja2>=3.1",
    "replicate>=0.32",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
smoketree = "smoketree.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smoketree"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
